[gd_scene load_steps=28 format=3 uid="uid://btkb1lrces40h"]

[ext_resource type="Script" path="res://Assets/Scripts/enemy.gd" id="1_ijtye"]
[ext_resource type="PackedScene" uid="uid://mfl3dy78e6p2" path="res://Assets/Weapons/AK-47_pickup.tscn" id="2_vfjip"]
[ext_resource type="PackedScene" uid="uid://dvrlyhgchtnmg" path="res://Assets/Weapons/Bazzoka_pickup.tscn" id="3_gc6xt"]
[ext_resource type="PackedScene" uid="uid://d4i3jeaokspt0" path="res://Assets/Weapons/Knife_pickup.tscn" id="4_5380d"]
[ext_resource type="Script" path="res://Assets/Enteties/CloseGuyBrain.gd" id="4_xk3ta"]
[ext_resource type="Script" path="res://Assets/Scripts/DetectionRange.gd" id="5_uuk40"]
[ext_resource type="Shader" path="res://Assets/Shaders/flashShader.gdshader" id="6_3v7rh"]
[ext_resource type="Texture2D" uid="uid://rkcmhlalm0c5" path="res://Assets/Sprites/Sprite Sheets/Skeleton.png" id="7_or1uv"]
[ext_resource type="Script" path="res://Assets/Enteties/FlashAnimationPlayer.gd" id="8_ecgo4"]
[ext_resource type="Script" path="res://Assets/Scripts/HitBox.gd" id="9_7pyrk"]
[ext_resource type="Script" path="res://Assets/Scripts/Stats.gd" id="10_wh335"]
[ext_resource type="Theme" uid="uid://dugp6bbi0wp31" path="res://Themes/HealthBar.tres" id="11_tti75"]
[ext_resource type="Script" path="res://Assets/Scripts/HealthBar.gd" id="12_ronv1"]
[ext_resource type="PackedScene" uid="uid://ch8p4ii7f4ed7" path="res://Assets/Systems/off_screen_killer.tscn" id="13_a5qd7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dene"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qcrug"]
radius = 114.945

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ewyt"]
resource_local_to_scene = true
shader = ExtResource("6_3v7rh")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_t5dvy"]
atlas = ExtResource("7_or1uv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isj5c"]
atlas = ExtResource("7_or1uv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j8fy"]
atlas = ExtResource("7_or1uv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xlcw"]
atlas = ExtResource("7_or1uv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7h0to"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5dvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isj5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j8fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xlcw")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5wafl"]
resource_name = "Flash"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="Animation" id="Animation_ch281"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i21ui"]
_data = {
"Flash": SubResource("Animation_5wafl"),
"RESET": SubResource("Animation_ch281")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e77v"]

[sub_resource type="Theme" id="Theme_pkhrq"]

[node name="Enemy" type="CharacterBody2D" groups=["ENEMIES"]]
script = ExtResource("1_ijtye")
movement_speed = 25.0
item_drops = Array[PackedScene]([ExtResource("2_vfjip"), ExtResource("3_gc6xt"), null, ExtResource("4_5380d")])
item_drops_probablities = Array[int]([3, 1, 7, 2])

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3dene")

[node name="Brain" type="Node" parent="." groups=["ENEMIES"]]
script = ExtResource("4_xk3ta")

[node name="DetectionRange" type="Area2D" parent="."]
script = ExtResource("5_uuk40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
scale = Vector2(2.61, 2.61)
shape = SubResource("CircleShape2D_qcrug")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_2ewyt")
sprite_frames = SubResource("SpriteFrames_7h0to")
animation = &"new_animation"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
reset_on_save = false
speed_scale = 20.0
libraries = {
"": SubResource("AnimationLibrary_i21ui")
}
script = ExtResource("8_ecgo4")

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("9_7pyrk")

[node name="HitBoxCollision" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_6e77v")

[node name="Stats" type="Node" parent="."]
script = ExtResource("10_wh335")
max_health = 20

[node name="Healdisplay" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="Healdisplay"]
offset_left = -9.0
offset_top = -12.0
offset_right = 9.0
offset_bottom = -8.0
tooltip_text = "Health"
theme = ExtResource("11_tti75")
value = 46.0
show_percentage = false
script = ExtResource("12_ronv1")
diffSpeed = 300

[node name="DiffBar" type="ProgressBar" parent="Healdisplay/HealthBar"]
show_behind_parent = true
layout_mode = 0
offset_right = 18.0
offset_bottom = 4.0
theme = SubResource("Theme_pkhrq")
value = 80.0
show_percentage = false

[node name="OffScreenKiller" parent="." instance=ExtResource("13_a5qd7")]

[connection signal="body_entered" from="DetectionRange" to="Brain" method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="Brain" method="_on_detection_range_body_exited"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="hit" from="HitBox" to="." method="_on_hit_box_hit"]
[connection signal="hit" from="HitBox" to="Sprite/AnimationPlayer" method="_on_hit_box_hit"]
[connection signal="hit" from="HitBox" to="Stats" method="_on_hit_box_hit"]
[connection signal="am_dead" from="Stats" to="." method="_on_stats_am_dead"]
[connection signal="health_updated" from="Stats" to="Healdisplay/HealthBar" method="_on_stats_health_updated"]
